added the inital scren ,home screen

--- a/app.json
+++ b/app.json
@@ -14,5 +14,11 @@
     ]
   ],
   "name": "evoliq-application",
-  "slug": "evoliq-application"
+  "slug": "evoliq-application",
+  "android": {
+    "package": "com.jigodji.evoliqapplication"
+  },
+  "ios": {
+    "bundleIdentifier": "com.jigodji.evoliqapplication"
+  }
 }
