--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-router": "~6.0.0",
     "expo-splash-screen": "~31.0.8",
     "expo-status-bar": "~3.0.7",
+    "lucide-react-native": "^0.555.0",
     "nativewind": "^4.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
