--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "clsx": "^2.1.1",
     "expo": "^54.0.1",
     "expo-constants": "~18.0.8",
     "expo-linking": "~8.0.7",
@@ -28,6 +29,7 @@
     "react-native-svg": "^15.15.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
